--- a/HW_18/Views/Store/Index.cshtml
+++ b/HW_18/Views/Store/Index.cshtml
@@ -1,5 +1,46 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
-@{
-}
+﻿@model List<HW_18.Models.Store>;
+<div class="card">
+    <div class="card-body">
+
+        <form class="form-inline" asp-action="Index" method="get">
+            <div class="form-group mx-sm-3 mb-2">
+                <input type="text" class="form-control" id="zip" name="zip" placeholder="Zip code">
+            </div>
+            <div class="form-group mx-sm-3 mb-2">
+                <input type="text" class="form-control" id="name" name="name" placeholder="Store name">
+            </div>
+            <button type="submit" class="btn btn-primary mb-2">Search</button>
+        </form>
+        <table class="table table-hover">
+            <thead>
+                <tr>
+                    <th scope="col">Store name</th>
+                    <th scope="col">Phone</th>
+                    <th scope="col">Email</th>
+                    <th scope="col">Street</th>
+                    <th scope="col">City</th>
+                    <th scope="col">State</th>
+                    <th scope="col">Zip code</th>
+                    <th scope="col">Operation</th>
+                </tr>
+            </thead>
+            <tbody>
+                @foreach (var store in Model)
+                {
+                    <tr>
+                        <th scope="row">@store.store_name</th>
+                        <th scope="row">@store.phone</th>
+                        <th scope="row">@store.email</th>
+                        <th scope="row">@store.street</th>
+                        <th scope="row">@store.city</th>
+                        <th scope="row">@store.state</th>
+                        <th scope="row">@store.zip_code</th>
+                        <th>
+                            <Button id="@store.store_id" class="btn btn-info mb-2">Details</Button>
+                        </th>
+                    </tr>
+                }
+            </tbody>
+        </table>
+    </div>
+</div>
