--- a/HW_18/Views/Store/Products.cshtml
+++ b/HW_18/Views/Store/Products.cshtml
@@ -3,8 +3,8 @@
     <div class="card-body">
 
         <span>sort price: </span>
-        <a class="btn btn-primary mb-2">Low to high</a>
-        <a class="btn btn-primary mb-2">High to low</a>
+        <a class="btn btn-primary mb-2" asp-action="Products" asp-route-isAsc="true">Low to high</a>
+        <a class="btn btn-primary mb-2" asp-route-isAsc="false">High to low</a>
         <table class="table table-hover">
             <thead>
                 <tr>
@@ -22,7 +22,7 @@
                         <th scope="row">@product.model_year</th>
                         <th scope="row">@product.list_price</th>
                         <th>
-                            <a class="btn btn-warning mb-2" asp-action="Products" asp-route-id="@product.product_id">Edit</a>
+                            <a class="btn btn-warning mb-2" asp-action="EditProduct" asp-route-id="@product.product_id">Edit</a>
                         </th>
                     </tr>
                 }
